--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
 title: Chase λ
-email: t.heicfire@gmail.com
+#email: chase.g.lambert@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://blog.chaselambda.com" # the base hostname & protocol for your site
 #twitter_username: jekyllrb
-github_username:  theicfire
+#github_username:  theicfire
 
 # Build settings
 markdown: kramdown
