--- a/admin/config.yml
+++ b/admin/config.yml
@@ -17,3 +17,12 @@ collections:
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Tags", name: "tags", widget: "list"}
       - {label: "Body", name: "body", widget: "markdown"}
+  - label: "pages"
+    name: "pages"
+    files:
+          - label: "About Page"
+            name: "about"
+            file: "about.md"
+            fields:
+              - {label: Title, name: title, widget: string}
+              - {label: "Body", name: "body", widget: "markdown"}
