--- a/admin/config.yml
+++ b/admin/config.yml
@@ -26,3 +26,9 @@ collections:
             fields:
               - {label: Title, name: title, widget: string}
               - {label: "Body", name: "body", widget: "markdown"}
+          - label: "Climate Page"
+            name: "climate"
+            file: "climate.md"
+            fields:
+              - {label: Title, name: title, widget: string}
+              - {label: "Body", name: "body", widget: "markdown"}
